--- a/manifesto.yaml
+++ b/manifesto.yaml
@@ -1,97 +1,62 @@
-apiVersion: v1
-items:
-- apiVersion: apps/v1
-  kind: Deployment
-  metadata:
-    annotations:
-      deployment.kubernetes.io/revision: "1"
-      kubectl.kubernetes.io/last-applied-configuration: |
-        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"nodehot"},"name":"nodehot","namespace":"default"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"nodehot"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"nodehot"}},"spec":{"containers":[{"image":"gru.ocir.io/id3kyspkytmr/projeto:v102","imagePullPolicy":"IfNotPresent","name":"nodehot","ports":[{"containerPort":3000,"protocol":"TCP"}],"resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File","volumeMounts":[{"mountPath":"/home/opc/.oci/config","name":"oci-config","subPath":"config"},{"mountPath":"/home/opc/.oci/oci_api_key.pem","name":"oci-apikey","subPath":"oci_api_key.pem"}]}],"dnsPolicy":"ClusterFirst","imagePullSecrets":[{"name":"ocisecret"}],"restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30,"volumes":[{"configMap":{"items":[{"key":"config","path":"config"}],"name":"oci-config"},"name":"oci-config"},{"configMap":{"items":[{"key":"oci_api_key.pem","path":"oci_api_key.pem"}],"name":"oci-apikey"},"name":"oci-apikey"}]}}}}
-    creationTimestamp: "2022-12-06T23:38:53Z"
-    generation: 1
-    labels:
-      app: nodehot
-    name: nodehot
-    namespace: default
-    resourceVersion: "4618390"
-    uid: d5811068-d80f-40a9-8048-8f033bb3d800
-  spec:
-    progressDeadlineSeconds: 600
-    replicas: 1
-    revisionHistoryLimit: 10
-    selector:
-      matchLabels:
-        app: nodehot
-    strategy:
-      rollingUpdate:
-        maxSurge: 25%
-        maxUnavailable: 25%
-      type: RollingUpdate
-    template:
-      metadata:
-        creationTimestamp: null
-        labels:
-          app: nodehot
-      spec:
-        containers:
-        - image: gru.ocir.io/id3kyspkytmr/projeto:v102
-          imagePullPolicy: IfNotPresent
-          name: nodehot
-          ports:
-          - containerPort: 3000
-            protocol: TCP
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
-          volumeMounts:
-          - mountPath: /home/opc/.oci/config
-            name: oci-config
-            subPath: config
-          - mountPath: /home/opc/.oci/oci_api_key.pem
-            name: oci-apikey
-            subPath: oci_api_key.pem
-        dnsPolicy: ClusterFirst
-        imagePullSecrets:
-        - name: ocisecret
-        restartPolicy: Always
-        schedulerName: default-scheduler
-        securityContext: {}
-        terminationGracePeriodSeconds: 30
-        volumes:
-        - configMap:
-            defaultMode: 420
-            items:
-            - key: config
-              path: config
-            name: oci-config
-          name: oci-config
-        - configMap:
-            defaultMode: 420
-            items:
-            - key: oci_api_key.pem
-              path: oci_api_key.pem
-            name: oci-apikey
-          name: oci-apikey
-  status:
-    availableReplicas: 1
-    conditions:
-    - lastTransitionTime: "2022-12-06T23:38:53Z"
-      lastUpdateTime: "2022-12-06T23:39:03Z"
-      message: ReplicaSet "nodehot-787cd85d45" has successfully progressed.
-      reason: NewReplicaSetAvailable
-      status: "True"
-      type: Progressing
-    - lastTransitionTime: "2022-12-06T23:53:09Z"
-      lastUpdateTime: "2022-12-06T23:53:09Z"
-      message: Deployment has minimum availability.
-      reason: MinimumReplicasAvailable
-      status: "True"
-      type: Available
-    observedGeneration: 1
-    readyReplicas: 1
-    replicas: 1
-    updatedReplicas: 1
-kind: List
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  resourceVersion: ""
-  selfLink: ""
+  annotations:
+  labels:
+    app: nodehot
+  name: nodehot
+spec:
+  progressDeadlineSeconds: 600
+  replicas: 1
+  revisionHistoryLimit: 10
+  selector:
+    matchLabels:
+      app: nodehot
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        app: nodehot
+    spec:
+      volumes:
+      - configMap:
+          items:
+          - key: config
+            path: config
+          name: oci-config
+        name: oci-config
+      - configMap:
+          items:
+          - key: oci_api_key.pem
+            path: oci_api_key.pem
+          name: oci-apikey 
+        name: oci-apikey      
+      containers:
+      - image: gru.ocir.io/id3kyspkytmr/projeto:v101
+        imagePullPolicy: IfNotPresent
+        name: nodehot
+        ports:
+        - containerPort: 3000
+          protocol: TCP
+        volumeMounts:
+        - mountPath: /home/opc/.oci/config
+          name: oci-config
+          subPath: config
+        - mountPath: /home/opc/.oci/oci_api_key.pem
+          name: oci-apikey
+          subPath: oci_api_key.pem
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      imagePullSecrets:
+      - name: ocisecret
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
