--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "portal-testes",
+    "name": "Demo Chave autenticada",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
